@@ -173,7 +173,6 @@
                           <object class="GtkImage" id="image2">
                             <property name="visible">True</property>
                             <property name="stock">gtk-ok</property>
-                            <property name="icon-size">4</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -661,7 +660,6 @@
                           <object class="GtkImage" id="image13">
                             <property name="visible">True</property>
                             <property name="stock">gtk-ok</property>
-                            <property name="icon-size">4</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -1466,7 +1464,6 @@
                       <object class="GtkImage" id="image6">
                         <property name="visible">True</property>
                         <property name="stock">gtk-convert</property>
-                        <property name="icon-size">4</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -1630,7 +1627,6 @@ The data in the field was not recognized. Please try to correct the data or reve
                           <object class="GtkImage" id="image5">
                             <property name="visible">True</property>
                             <property name="stock">gtk-undo</property>
-                            <property name="icon-size">4</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -1805,4 +1801,55 @@ The data in the field was not recognized. Please try to correct the data or reve
     <property name="page_increment">10</property>
   </object>
   <object class="GtkTextBuffer" id="textbuffer1"/>
+  <object class="GtkDialog" id="dialog_image_progress">
+    <property name="border_width">5</property>
+    <property name="title" translatable="yes">Loading image</property>
+    <property name="window_position">center-on-parent</property>
+    <property name="default_width">640</property>
+    <property name="type_hint">normal</property>
+    <property name="has_separator">False</property>
+    <child internal-child="vbox">
+      <object class="GtkVBox" id="dialog-vbox7">
+        <property name="visible">True</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child>
+          <object class="GtkProgressBar" id="image_loading_progress_bar">
+            <property name="visible">True</property>
+          </object>
+          <packing>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child internal-child="action_area">
+          <object class="GtkHButtonBox" id="dialog-action_area7">
+            <property name="visible">True</property>
+            <property name="layout_style">end</property>
+            <child>
+              <object class="GtkButton" id="button1">
+                <property name="label" translatable="yes">gtk-cancel</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_stock">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+    <action-widgets>
+      <action-widget response="-6">button1</action-widget>
+    </action-widgets>
+  </object>
 </interface>
