@@ -24,6 +24,7 @@
 #include <gtkmm.h>
 #include <libglom/data_structure/field.h>
 #include "layoutwidgetfield.h"
+#include "dialog_image_progress.h"
 #include <gtkmm/builder.h>
 
 namespace Glom
